app1/manifest.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: app1
  labels:
    app: app1
    purpose: tesing-app1 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
      purpose: tesing-app1 
  template:
    metadata:
      labels:
        app: app1
        purpose: tesing-app1 
    spec:
      containers:
      - name: app1
        image: naveenrajoli/app1:1.0.0
        port:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1-svc 
spec:
  selector:
    app: app1
    purpose: tesing-app1 
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
